--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="hd-translator">
     <f:if condition="{emptyStorage}">
         <f:then>
             First configure the sotrage.
