--- a/Resources/Private/Templates/Be/Translator/List.html
+++ b/Resources/Private/Templates/Be/Translator/List.html
@@ -2,6 +2,7 @@
         xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
         xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
         xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+        xmlns:translator="http://typo3.org/ns/Hyperdigital/HdTranslator/ViewHelpers"
         data-namespace-typo3-fluid="true">
 
 <f:layout name="Default" />
@@ -10,28 +11,36 @@
 </f:section>
 
 <f:section name="content">
-    <f:if condition="{data}">
-        <f:for each="{data}" key="index" as="file">
-            <div>
-                <div>{file.label}</div>
-                <div>
-                    <f:if condition="{file.availableLanguages}">
-                        <f:for each="{file.availableLanguages}"  as="lang" key="langShort">
-                            <f:link.action action="detail" arguments="{keyTranslation: index, languageTranslation: langShort}">{lang}</f:link.action>
-                        </f:for>
-                    </f:if>
-                </div>
-                <div style="color: silver; opacity: 0.3;">
-                    <f:if condition="{file.languages}">
-                        <f:then>
-                            <f:for each="{file.languages}" as="lang">
-                                <f:link.action action="detail" arguments="{keyTranslation: index, languageTranslation: lang}">{languagesArray.{lang}}</f:link.action>
-                            </f:for>
-                        </f:then>
-                    </f:if>
-                </div>
-            </div>
-        </f:for>
-    </f:if>
+    <div class="hd-translator">
+        <f:if condition="{data}">
+            <table class="hd-translator-list-table">
+                <f:for each="{data}" key="index" as="file">
+                    <tr>
+                        <td class="hd-translator-list-table-label">{file.label}</td>
+                        <td class="hd-translator-list-table-flags">
+                            <f:if condition="{file.availableLanguages}">
+                                <div class="hd-translator-list-flags-wrap">
+                                    <f:for each="{file.availableLanguages}"  as="lang" key="langShort">
+                                        <f:link.action action="detail" arguments="{keyTranslation: index, languageTranslation: langShort}">
+                                            <f:image title="{lang}" src="{translator:getFlagName(language: langShort)}" height="36" />
+                                        </f:link.action>
+                                    </f:for>
+                                </div>
+                            </f:if>
+                        </td>
+                        <td  class="hd-translator-list-table-tools">
+                            <f:if condition="{file.languages}">
+                                <f:then>
+                                    <f:for each="{file.languages}" as="lang">
+                                        <f:link.action action="detail" arguments="{keyTranslation: index, languageTranslation: lang}">{languagesArray.{lang}}</f:link.action>
+                                    </f:for>
+                                </f:then>
+                            </f:if>
+                        </td>
+                    </tr>
+                </f:for>
+            </table>
+        </f:if>
+    </div>
 </f:section>
 </html>
