--- a/Resources/Private/Templates/Be/Translator/Detail.html
+++ b/Resources/Private/Templates/Be/Translator/Detail.html
@@ -10,7 +10,6 @@
 </f:section>
 
 <f:section name="content">
-    <f:asset.css identifier="hd_translator" href="EXT:/hd_translator/Resources/Public/Css/Backend/main.css" />
     <div class="hd-translator">
         <f:if condition="{is_empty}">
             <f:then>
@@ -23,6 +22,16 @@
                             TODO: language select
                         </div>
                         <div class="toolbar-button-section">
+                            <div class="popup-action">
+                                <button>
+                                    <f:link.action action="remove" arguments="{keyTranslation: translationKey, languageTranslation: langaugeKey}">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                                        </svg>
+                                        <f:translate key="detail.remove" />
+                                    </f:link.action>
+                                </button>
+                            </div>
                             <div class="popup-action">
                                 <button>
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
