Update of translator from KEM

--- a/Resources/Private/Templates/Be/Translator/Detail.html
+++ b/Resources/Private/Templates/Be/Translator/Detail.html
@@ -19,7 +19,7 @@
                 <f:if condition="{data}">
                     <div class="toolbar-section">
                         <div>
-                            TODO: language select
+                            <span></span>
                         </div>
                         <div class="toolbar-button-section">
                             <div class="popup-action">
