--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -27,7 +27,7 @@
     'category' => 'Category1',
     'languages' => [
         'de',
-        'en'
+        'default' // can be used also en, but still not fully compatible
     ]
 ];</pre>
                 </f:else>
