--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -19,7 +19,7 @@
                         <f:link.action action="syncLocallangs">TODO:Run sync</f:link.action>
                     </f:if>
 
-                    <h3>No translation enabled for translation.</h3>
+                    <h3>No translation enabled to be translated.</h3>
                     <p>To set up the translation add this settings</p>
                     <pre>$GLOBALS['TYPO3_CONF_VARS']['translator']['news'] = [
     'label' => 'News',
