Updated exportable db entries

--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -1,7 +1,7 @@
 <div class="hd-translator">
     <f:if condition="{emptyStorage}">
         <f:then>
-            First configure the sotrage.
+            First configure the storage.
         </f:then>
         <f:else>
             <f:if condition="{categories}">
